grammar.js
        source_file: $ => repeat($._markup),

        identifier: $ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

        _markup: $ => prec.left(choice(
            $._text,
            $.quote,
            $.line_break,
            $.escape_sequence,
            $._code_mode,
            // $.paragraph_break
            // $.math_mode,
        )),

        // add support for '
        code_block: $ => prec(PREC.assignment, (seq(
            '{',
            optional($._statements),
            '}'
        ))),

        content_block: $ => seq(
            '[',
            optional(repeat1($._markup)),
            ']',
        ),

        // group-expr ::= '(' expr ')'
        _statements: $ => prec.left(repeat1(seq($._expression_statement, optional(token.immediate(';'))))),

        let_declaration: $ => prec(PREC.assignment, seq(
            'let',
            field('lhs', choice($.identifier, $.function)),
            seq(
                '=',
                field('rhs', prec.right($.expression))
            ),
        )),

        function_call: $ => prec.right(PREC.call, seq(
            // #type
            field('function', $.identifier),
            // #type[]
            optional(choice(
                // #type(name())
                // where name() is a function call
                // also parses
                // #list([A], [B])
                // #enum(start: 2)[A][B]
                seq(field('arguments', $.parameters), optional(
                    seq(
                        // #type.name().hello
                        // #type.hello.
                        token.immediate('.'),
                        field('field', $.function_call)
                    ))),
                seq(
                    // #type.name().hello
                    // #type.hello.
                    token.immediate('.'),
                    field('field', $.function_call)
                ),
            )), optional(choice(
                token.immediate('.'),
                token.immediate("'"),
                token.immediate('?'),
                token.immediate('!'),
            )),
        )),

        int_literal: $ => /\d+/,

        // float ::= ((digit+ ('.' digit*)?) | ('.' digit+)) ('e' digit+)?
        // A floating-point number: `1.2`, `10e-4`.
        string_literal: $ => seq(
            /"/,
            repeat(choice(
                $.escape_sequence,
                $._not_an_escape_sequence,
                $._string_content
            )),
            token.immediate('"')

        ),

        _not_an_escape_sequence: $ => token.immediate(
            '\\'
        ),
