test/corpus/markup.txt
================================================================================
Code Block
================================================================================

#{
let x = 1
}

#[
this is some text
]

--------------------------------------------------------------------------------

(source_file
 (code_block
  (let_declaration
    (identifier)
   (int_literal)))
 (content_block))


================================================================================
Markup Text
================================================================================

#let hello = "Hello, world!"
hello this is normal text! #hello is a variable!

--------------------------------------------------------------------------------

(source_file
 (let_declaration
  (identifier)
  (string_literal))
 (function_call
  (identifier)))

================================================================================
Markup kinds
================================================================================

+ Hello there! (this shouldn't do weird stuff)

--------------------------------------------------------------------------------

(source_file)
